many changes 	added an error class system if result NaN or Infintiy 	corresponding css changes made/added 	fixed up parseuserinput for post result behaviour 		buttons have a disable look 		the result text turns red 	to add 		fix the display chars width issue to prevent overflowing

--- a/src/components/scss/_display.scss
+++ b/src/components/scss/_display.scss
@@ -23,6 +23,13 @@
     .result {
       font-size: 2.7em;
     }
+    .result_err {
+      @extend .result;
+      color: red;
+    }
+    .result_baba {
+      font-size: 2.3em;
+    }
   }
   sup {
     top: -0.8em;
