--- a/src/components/scss/_themes_map.scss
+++ b/src/components/scss/_themes_map.scss
@@ -266,6 +266,8 @@ $themes: (
       }
 
       //buttons
+      $prm-btn-bg-color: themed(primaryButtonColor);
+      $btn-primary-text-color: themed(primaryButtonTextColor);
       .btn-primary {
         background-color: themed(primaryButtonColor);
         color: themed(primaryButtonTextColor);
@@ -280,7 +282,13 @@ $themes: (
         &:active {
           background-color: themed(primaryButtonActiveColor);
         }
+        &.btn-error {
+          background-color: darken($prm-btn-bg-color, 15%);
+          color:darken($btn-primary-text-color, 50%);
+        }
       }
+      $scnd-btn-bg-color: themed(secondaryButtonColor);
+      $btn-secondary-text-color: themed(secondaryButtonTextColor);
       .btn-secondary {
         background-color: themed(secondaryButtonColor);
         color: themed(secondaryButtonTextColor);
@@ -295,43 +303,55 @@ $themes: (
         &:active {
           background-color: themed(secondaryButtonActiveColor);
         }
+        &.btn-error {
+          background-color: darken($scnd-btn-bg-color, 15%);
+          color:darken($btn-secondary-text-color, 50%);
+        }
       }
+      $btn-danger-bg-color: #DC3545;
       .btn-danger {
         color: #fff;
-        background-color: #dc3545;
+        background-color: $btn-danger-bg-color;
         border-color: #dc3545;
         &:hover,
         &:focus {
           color: #fff;
           background-color: #bb2d3b;
           border-color: #b02a37;
-          &:focus {
-            box-shadow: 0 0 0 0.1rem rgb(225 83 97 / 50%);
-          }
+        }
+        &:focus {
+          box-shadow: 0 0 0 0.1rem rgb(225 83 97 / 50%);
         }
         &:active {
           color: #fff;
           background-color: #b02a37;
           border-color: #a52834;
         }
+        &.btn-error {
+          background-color: darken($btn-danger-bg-color, 15%);
+        }
       }
+      $btn-success-bg-color: #198754;
       .btn-success {
         color: #fff;
-        background-color: #198754;
+        background-color: $btn-success-bg-color;
         border-color: #198754;
         &:hover,
         &:focus {
           color: #fff;
           background-color: #157347;
           border-color: #146c43;
-          &:focus {
-            box-shadow: 0 0 0 0.1rem rgb(60 153 110 / 50%);
-          }
+        }
+        &:focus {
+          box-shadow: 0 0 0 0.1rem rgb(60 153 110 / 50%);
         }
         &:active {
           color: #fff;
           background-color: #146c43;
           border-color: #13653f;
+        }
+        &.btn-error {
+          background-color: darken($btn-success-bg-color, 15%);
         }
       }
     }
